[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kastrula"
version = "0.2.0"
description = "Сетевая кастрюля — TLS, HTTP, DNS, WebSocket, WHOIS, сканер, прокси 🍲"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "KrScript"}]
keywords = ["networking", "tls", "dns", "scanner", "http", "fingerprint", "whois", "websocket", "proxy", "osint"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet",
    "Topic :: System :: Networking",
]

dependencies = [
    "httpx[http2]>=0.25.0",
    "cryptography>=41.0",
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/KrScript/kastrula"
Issues = "https://github.com/KrScript/kastrula/issues"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["kastrula*"]

[project.scripts]
kastrula = "kastrula.cli:main"
